package edu.ntnu.idi.idatt.millions.model.transaction;

import edu.ntnu.idi.idatt.millions.model.Player;
import edu.ntnu.idi.idatt.millions.model.Share;
import edu.ntnu.idi.idatt.millions.model.calculator.SaleCalculator;
import java.math.BigDecimal;

/**
 * Represents a sale transaction of a share in the game. Handles the logic for completing the sale,
 * including verifying that the player owns the share, adding the total value to the player's
 * balance, and removing the share from the portfolio.
 */
public class Sale extends Transaction {

  /**
   * Creates a new sale transaction.
   *
   * @param share the share to be sold
   * @param week the week the transaction takes place
   */
  public Sale(Share share, int week) {
    super(share, week, new SaleCalculator(share));
  }

  /**
   * Executes the sale logic for a given player. Calculates the total value, adds the amount to the
   * player's balance, and removes the share from the player's portfolio.
   *
   * @param player the player executing the sale
   * @throws IllegalStateException if the player does not own the share being sold
   */
  @Override
  protected void executeTransaction(Player player) {
    BigDecimal totalValue = getCalculator().calculateTotal();

    if (!player.getPortfolio().contains(getShare())) {
      throw new IllegalStateException("Player does not have this share");
    }

    player.addMoney(totalValue);
    player.getPortfolio().removeShare(getShare());
  }

  /**
   * Returns the original cost basis of the share being sold.
   *
   * @return purchase price multiplied by quantity
   */
  public BigDecimal getCostBasis() {
    return getShare().getPurchasePrice().multiply(getShare().getQuantity());
  }

  /**
   * Returns the realized gain or loss from this sale.
   *
   * @return net proceeds after fees and tax minus the original cost basis
   */
  public BigDecimal getRealizedGain() {
    return getCalculator().calculateTotal().subtract(getCostBasis());
  }
}
